--- a/templates/rooms/room_list.html
+++ b/templates/rooms/room_list.html
@@ -1,26 +1,32 @@
 {% extends "base.html" %}
+{% load static i18n %}
 {% block page_title %}
     Home
 {% endblock page_title %}
 {% block content %}
 
-    {% for room in rooms %}
-    <h4>
-        <a href="{% url "rooms:detail" room.pk %}">{{ room }}/{{ room.price }}</a>
-    </h4>
-    {% endfor %}
+    <div class="container mx-auto pb-10">
 
+        <div class="rounded-xl -mx-40 bg-gray-800 h-50vh my-32 mb-24 bg-cover bg-center" style="background-image:url({% static 'bg.jpeg' %});"></div>
 
-    <h5>
-        {% if page_obj.has_previous %}
-            <a href="?page={{ page_obj.previous_page_number }}">Previous</a>
-        {% endif %}
-        Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}
-        {% if page_obj.has_next %}
-            <a href="?page={{ page_obj.next_page_number }}">Next</a>
-        {% endif %}
-    </h5>
-
-
+        <div class="flex flex-wrap -mx-40 mb-10">
+            {% for room in rooms %}
+                {% include 'partials/room_card.html' with room=room %}
+            {% endfor %}
+        </div>
+        <div class="flex items-center mx-auto container justify-center">
+            {% if page_obj.has_previous %}
+                <a href="?page={{ page_obj.previous_page_number }}" class="text-teal-500">
+                    <i class="fas fa-arrow-left fa-lg"></i>
+                </a>
+            {% endif %}
+            <span class="mx-3 font-medium text-lg">{{ page_obj.number }} of {{ page_obj.paginator.num_pages }}</span>
+            {% if page_obj.has_next %}
+                <a href="?page={{ page_obj.next_page_number }}" class="text-teal-500">
+                    <i class="fas fa-arrow-right fa-lg"></i>
+                </a>
+            {% endif %}
+        </div>
+    </div>
 
 {% endblock %}
