--- a/templates/rooms/room_list.html
+++ b/templates/rooms/room_list.html
@@ -3,30 +3,37 @@
 {% block page_title %}
     Home
 {% endblock page_title %}
+
 {% block content %}
 
     <div class="container mx-auto pb-10">
 
-        <div class="rounded-xl -mx-40 bg-gray-800 h-50vh my-32 mb-24 bg-cover bg-center" style="background-image:url({% static 'bg.jpeg' %});"></div>
+        <div class="rounded-xl bg-gray-800  -mx-40  h-50vh mt-32 mb-24 bg-cover bg-center" style="background-image:url({% static 'bg.jpeg' %});"></div>
 
         <div class="flex flex-wrap -mx-40 mb-10">
-            {% for room in rooms %}
-                {% include 'partials/room_card.html' with room=room %}
+            {% for room in rooms  %}
+                {% include 'mixins/room/room_card.html' with room=room %}
             {% endfor %}
         </div>
-        <div class="flex items-center mx-auto container justify-center">
+        <div class="flex items-center justify-center mx-auto container">
             {% if page_obj.has_previous %}
-                <a href="?page={{ page_obj.previous_page_number }}" class="text-teal-500">
+                <a href="?page={{page_obj.previous_page_number}}" class="text-teal-500">
                     <i class="fas fa-arrow-left fa-lg"></i>
                 </a>
             {% endif %}
-            <span class="mx-3 font-medium text-lg">{{ page_obj.number }} of {{ page_obj.paginator.num_pages }}</span>
-            {% if page_obj.has_next %}
-                <a href="?page={{ page_obj.next_page_number }}" class="text-teal-500">
+
+            <span class="mx-3 font-medium text-lg">
+                {% blocktrans with current_page=page_obj.number total_pages=page_obj.paginator.num_pages %}Page {{current_page}} of {{total_pages}}{% endblocktrans %}
+            </span>
+
+            {% if page_obj.has_next  %}
+                <a href="?page={{page_obj.next_page_number}}" class="text-teal-500">
                     <i class="fas fa-arrow-right fa-lg"></i>
                 </a>
             {% endif %}
-        </div>
-    </div>
 
-{% endblock %}
+
+        </div>
+
+    </div>
+{% endblock content %}
