--- a/templates/partials/nav.html
+++ b/templates/partials/nav.html
@@ -12,10 +12,12 @@
         {% if request.session.is_hosting %}
             <li class="nav_link"><a href="{% url 'rooms:create' %}">Create Room</a></li>
         {% endif %}
-        <li class="nav_link"><a href="{{ user.get_absolute_url }}">Profile</a> </li>
-        <li class="nav_link"><a href="{% url 'users:logout' %}">Log out</a> </li>
+        <li class="nav_link"><a href="{% url 'lists:see-favs' %}">Favs ({{user.list.rooms.count}})</a></li>
+        <li class="nav_link"><a href="{% url 'reservations:list-guest' %}">Reservations</a></li>
+        <li class="nav_link"><a href="{{user.get_absolute_url}}">Profile</a></li>
+        <li class="nav_link"><a href="{% url "users:logout" %}">Log out</a></li>
     {% else %}
-        <li class="nav_link"><a href="{% url 'users:login' %}">Login</a> </li>
-        <li class="nav_link"><a href="{% url 'users:signup' %}">Sign Up</a> </li>
+        <li class="nav_link"><a href="{% url "users:login" %}">Log in</a></li>
+        <li class="nav_link"><a href="{% url "users:signup" %}">"Sign up</a></li>
     {% endif %}
 </ul>
