--- a/templates/rooms/detail.html
+++ b/templates/rooms/detail.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% load i18n %}
+{% load is_booked on_favs %}
 
 {% block page_title %}
     {{room.name}}
@@ -28,12 +28,12 @@
                     <span class="mt-2 text-gray-500">{{room.host.first_name}}</span>
                 </a>
             </div>
-{#            {% on_favs room as on_favs_boolean %}#}
-{#            {% if on_favs_boolean %}#}
-{#                <a class="block mb-10 w-2/6 text-teal-600 font-bold" href="{% url 'lists:toggle-room' room.pk %}?action=remove">{% trans "Remove from Favourites" %}</a>#}
-{#            {% else %}#}
-{#                <a class="block mb-10 w-2/6 text-teal-600 font-bold" href="{% url 'lists:toggle-room' room.pk %}?action=add">{% trans "Save to Favourites" %}</a>#}
-{#            {% endif %}#}
+            {% on_favs room as on_favs_boolean %}
+            {% if on_favs_boolean %}
+                <a class="block mb-10 w-2/6 text-teal-600 font-bold" href="{% url 'lists:toggle-room' room.pk %}?action=remove">Remove from Favourites</a>
+            {% else %}
+                <a class="block mb-10 w-2/6 text-teal-600 font-bold" href="{% url 'lists:toggle-room' room.pk %}?action=add">Save to Favourites</a>
+            {% endif %}
 
             <div class="flex border-section">
                 <span class="mr-5 font-light">{{room.room_type}}</span>
@@ -97,35 +97,35 @@
         <div class="w-1/3">
             {% if room.host == user %}
                 <a href="{% url 'rooms:edit' room.pk %}" class="btn-link block">Edit Room</a>
-{#            {% else %}#}
-{#                {% if not request.session.is_hosting %}#}
-{#                    {% for calendar in room.get_calendars %}#}
-{#                    <div class="mb-20">#}
-{#                        <span class="text-center font-semibold text-lg block mb-8">{{calendar.get_month}} / {{calendar.year}}</span>#}
-{#                        <div class="cal-grid font-medium mb-4">#}
-{#                            {% for day in calendar.day_names  %}#}
-{#                                <span>{{day}}</span>#}
-{#                            {% endfor %}#}
-{#                        </div>#}
-{#                        <div class="cal-grid">#}
-{#                            {% for day in calendar.get_days  %}#}
-{#                                {% is_booked room day as is_booked_bool %}#}
-{#                                {% if day.number != 0 %}#}
-{#                                    {% if day.past %}#}
-{#                                        <span class="cal-number bg-gray-200 text-gray-400">{{day}}</span>#}
-{#                                    {% elif is_booked_bool %}#}
-{#                                        <span class="cal-number bg-gray-200 text-gray-400 line-through">{{day}}</span>#}
-{#                                    {% else %}#}
-{#                                        <a href="{% url 'reservations:create' room.pk day.year day.month day.number %}" class="cal-number bg-gray-200 text-gray-700 hover:bg-teal-400 hover:text-white hover:font-medium">{{day}}</a>#}
-{#                                    {% endif %}#}
-{#                                {% else %}#}
-{#                                  <span></span>#}
-{#                                {% endif %}#}
-{#                            {% endfor %}#}
-{#                        </div>#}
-{#                    </div>#}
-{#                    {% endfor %}#}
-{#                {% endif %}#}
+            {% else %}
+                {% if not request.session.is_hosting %}
+                    {% for calendar in room.get_calendars %}
+                        <div class="mb-20">
+                        <span class="text-center font-semibold text-lg block mb-8">{{ calendar.get_month }} / {{ calendar.year }}</span>
+                        <div class="cal-grid mb-4 font-medium">
+                            {% for day in calendar.day_names %}
+                                <span>{{ day }}</span>
+                            {% endfor %}
+                        </div>
+                        <div class="cal-grid">
+                            {% for day in calendar.get_days %}
+                                {% is_booked room day as is_booked_bool %}
+                                {% if day.number != 0 %}
+                                    {% if day.past %}
+                                        <span class="rounded bg-gray-200 w-full text-center p-1 text-gray-300">{{ day }}</span>
+                                    {% elif is_booked_bool %}
+                                        <span class="rounded bg-gray-200 w-full text-center p-1 text-gray-300 line-through">{{ day }}</span>
+                                    {% else %}
+                                        <a href="{% url 'reservations:create' room.pk day.year day.month day.number %}" class="bg-gray-200 w-full text-center rounded text-gray-700 p-1 hover:bg-teal-400 hover:text-white hover:font-medium cursor-pointer">{{ day }}</a>
+                                    {% endif %}
+                                {% else %}
+                                    <span></span>
+                                {% endif %}
+                            {% endfor %}
+                        </div>
+                        </div>
+                    {% endfor %}
+                {% endif %}
             {% endif %}
         </div>
     </div>
